// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Follows video interaction flows correctly an attempt to pause the video when it is already paused will be ignored 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Follows video interaction flows correctly an attempt to play the video when a previous play attempt is still loading will show the loading state again 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Follows video interaction flows correctly an attempt to play the video when it is already playing will be ignored 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Follows video interaction flows correctly an attempt to play the video will correctly interrupt any attempts to pause it 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Follows video interaction flows correctly handles a video playback error correectly 1`] = `
.emotion-1 {
  position: relative;
}

.emotion-0 {
  width: 100%;
  display: block;
  object-fit: cover;
}

<div>
  <div
    class="emotion-1"
    data-testid="hover-video-player-container"
  >
    <video
      class="emotion-0"
      loop=""
      playsinline=""
      preload="metadata"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Follows video interaction flows correctly the video will be paused immediately when its play attempt completes after we have already stopped 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Handles interaction events correctly mouseEnter and mouseLeave events take the video through its play and pause flows correctly 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Handles interaction events correctly touch events take the video through its play and pause flows correctly 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Supports browsers that do not return a promise from video.play() handles playback errors correctly for browsers that don't return a Promise from video.play() 1`] = `
.emotion-1 {
  position: relative;
}

.emotion-0 {
  width: 100%;
  display: block;
  object-fit: cover;
}

<div>
  <div
    class="emotion-1"
    data-testid="hover-video-player-container"
  >
    <video
      class="emotion-0"
      loop=""
      playsinline=""
      preload="metadata"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;

exports[`Supports browsers that do not return a promise from video.play() handles start flow correctly for browsers that don't return a Promise from video.play() 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-0 {
  position: relative;
  display: block;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

.emotion-0 > * {
  display: block;
  width: 100%;
}

.emotion-1 {
  z-index: 2;
  pointer-events: none;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

.emotion-2 {
  width: 100%;
  display: block;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="emotion-3"
    data-testid="hover-video-player-container"
  >
    <div
      class="emotion-0"
      data-testid="paused-overlay-wrapper"
      style="opacity: 1; transition: opacity 400ms;"
    >
      <div />
    </div>
    <div
      class="emotion-1"
      data-testid="loading-overlay-wrapper"
      style="opacity: 0; transition: opacity 400ms;"
    >
      <div />
    </div>
    <video
      class="emotion-2"
      loop=""
      playsinline=""
      preload="none"
    >
      <source
        src="fake/video-file.mp4"
      />
    </video>
  </div>
</div>
`;
